--- a/src/index.html
+++ b/src/index.html
@@ -9,118 +9,32 @@
 </head>
 
 <body>
-
     <div id="map"></div>
 
-    <div id="menu">
-        <button onclick="townMap.recenter();">Recenter</button>
+    <div class="sidePanel">
+        <!-- FILTER INPUT -->
+        <h2>Filter Locations:
+            <select data-bind="options: filters, value: selectedFilter"></select>
+        </h2>
+        <div id="mapReset" class="btn" data-bind="click: resetFilter">Reset</div>
+
+        <!-- LOCAION LIST -->
+        <h2 data-bind="text: listTitle">Destinations</h2>
+        <div id="locationList" data-bind="with: locationList">
+            <ul data-bind="foreach: locations">
+                <li class="btn" data-bind="text: name, click: $root.showLocation, visible: isVisible"></li>
+            </ul>
+        </div>
+    </div>
+    
+    <!-- LOCATION DETAILS -->
+    <div class="sidePanel" data-bind="visible: detailsView.isVisible">
+        <div id="close" class="btn btnClose" data-bind="click: detailsView.close">X</div>
+        <div data-bind="html: detailsView.content"></div>
     </div>
 
-    <script>
-        var TownMap = function () {
-            var self = this;
-
-            self.init = function () {
-                // Store some useful stuff so we can use it later
-                self.map = new google.maps.Map(document.getElementById('map'), Model.initialView);
-                self.bounds = new google.maps.LatLngBounds();
-                self.infoWindow = new google.maps.InfoWindow();
-                // Track the number of markers that have been added
-                var totalMarkers = Model.locations.length;
-                var markerCount = 0;
-                // Create a new marker for each location
-                Model.locations.forEach(function (location, index) {
-                    // Offset the loading of the markers
-                    setTimeout(function () {
-                        self.createMarker(location);
-                        markerCount++;
-                        if (markerCount === totalMarkers) {
-                            // Adjust the map view to see all of the markers
-                            self.map.fitBounds(self.bounds);
-                            // Store this new center so we can reset to it later
-                            self.initialCenter = self.map.getCenter();
-                        }
-                    }, index * 200);
-                });
-            };
-
-            self.createMarker = function (location) {
-                // Create a marker
-                var marker = new google.maps.Marker({
-                    position: location.position,
-                    animation: google.maps.Animation.DROP,
-                    map: self.map
-                });
-                // Add the click listener
-                marker.addListener('click', function () {
-                    self.activateMarker(location);
-                });
-                // Store important information
-                location.marker = marker;
-                self.bounds.extend(marker.getPosition());
-            }
-
-            self.bounceMarker = function (marker) {
-                marker.setAnimation(google.maps.Animation.BOUNCE);
-                setTimeout(function () {
-                    marker.setAnimation(null);
-                }, 700);
-            };
-
-            self.centerMap = function (marker) {
-                self.map.panTo(marker.position);
-            };
-
-            self.showInfowWindow = function (location) {
-                var output = '<h1>' + location.name + '</h1>';
-                self.infoWindow.setContent(output);
-                self.infoWindow.open(self.map, location.marker);
-            };
-
-            self.closeInfoWindow = function () {
-                self.infoWindow.close();
-            }
-
-            self.activateMarker = function (location) {
-                self.centerMap(location.marker);
-                self.bounceMarker(location.marker);
-                self.showInfowWindow(location);
-            };
-
-            self.recenter = function () {
-                self.closeInfoWindow();
-                self.map.panTo(self.initialCenter);
-            };
-        };
-
-        Model = {};
-        Model.initialView = {
-            zoom: 12,
-            center: {
-                lat: 39.575379,
-                lng: -76.995815
-            }
-        }
-        Model.locations = [{
-                name: 'Bullock\'s Family Country Restaurant',
-                position: {
-                    lat: 39.518414,
-                    lng: -76.984506
-                }
-            },
-            {
-                name: 'Baugher\'s Family Restaurant',
-                position: {
-                    lat: 39.584615,
-                    lng: -77.010905
-                }
-            }
-        ];
-
-        townMap = new TownMap();
-    </script>
-
-    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAmyXDT4NC-LUF-X7eytTXqyOyUrvaetrs&callback=townMap.init"></script>
+    <!-- REMOVED ASYNC. IT CAUSED ISSUES WITH LOAD ORDER. -->
+    <script defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAmyXDT4NC-LUF-X7eytTXqyOyUrvaetrs&callback=window.townMap.init"></script>
 </body>
 
 </html>
